# voice-scam-shield

./: .cursorrules  .gitignore  README.md  instructions_Voice_Scam_Shield.docx  ~$ice Scam Shield.docx
backend/: app.py  config.py  pyproject.toml
backend/models/: aasist_scripted.pt
backend/pipeline/: antispoof.py  asr_stream.py  diarization.py  fuse.py  intent.py
backend/utils/: audio_buffers.py  vad.py
docs/: context_gameplan.md  progress.md
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: Navbar.tsx  ProgressBar.tsx  StatusChip.tsx
frontend/lib/: useMicStream.ts
frontend/public/worklets/: pcm-processor.js
scripts/: fetch_models.py
scripts/demo_assets/: export_aasist_torchscript.py
